--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+      <meta name="description" content="منصة الإمام منصة متخصصة في تدريس المواد القانونية">
+      <meta name="keywords" content="الإمام, شريعة و قانون, حقوق">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./favicon (1).ico">
+    <title>أكاديمية الإمام القانونية</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet" />
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+          <strong>نأسف، ولكن لا يمكن لأكاديمية الإمام القانونية أن تعمل بشكل صحيح بدون تمكين JavaScript. يرجى تمكينه
+            للاستمرار.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+
   </body>
+  <!-- 
+    @media (min-width: 1200px) {
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+}
+
+@media (max-width: 767px) {
+}
+   -->
+  <script src="https://www.payfast.co.za/onsite/engine.js"></script>
 </html>
