--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-      <meta name="description" content="منصة الإمام منصة متخصصة في تدريس المواد القانونية">
-      <meta name="keywords" content="الإمام, شريعة و قانون, حقوق">
+      <meta name="description" content="منصة القانون منصة متخصصة في تدريس المواد القانونية">
+      <meta name="keywords" content="القانون, شريعة و قانون, حقوق">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./favicon (1).ico">
-    <title>أكاديمية الإمام القانونية</title>
+    <link rel="icon" href="./0cb84ec6-1ab4-447d-b53f-7d7e69328fe9.ico">
+    <title>أكاديمية القانون</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet" />
   </head>
   <body>
     <noscript>
-          <strong>نأسف، ولكن لا يمكن لأكاديمية الإمام القانونية أن تعمل بشكل صحيح بدون تمكين JavaScript. يرجى تمكينه
+          <strong>نأسف، ولكن لا يمكن لأكاديمية القانون أن تعمل بشكل صحيح بدون تمكين JavaScript. يرجى تمكينه
             للاستمرار.</strong>
     </noscript>
     <div id="app"></div>
